<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main3"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#48d1CC"
    android:orientation="vertical"
    tools:context="com.example.microsoftsurface.jalase6.Main3Activity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="-15dp"
            android:layout_marginTop="10dp"
            android:background="@android:color/transparent"
            android:text="@string/Back"
            android:textColor="@android:color/white"
            android:textSize="25dp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="150dp"
            android:layout_marginTop="10dp"
            android:background="@android:color/transparent"
            android:text="@string/Forget_Password"
            android:textColor="@android:color/white"
            android:textSize="15dp" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="18dp"
        android:layout_marginTop="30dp"
        android:text="@string/Login"
        android:textColor="@android:color/white"
        android:textSize="30dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="18dp"
        android:layout_marginTop="30dp"
        android:text="@string/Email"
        android:textColor="@android:color/white"
        android:textSize="15dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="18dp"
        android:layout_marginTop="20dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="18dp"
            android:layout_marginTop="30dp"
            android:background="@android:color/transparent"
            android:text="@string/Password"
            android:textColor="@android:color/white"
            android:textSize="15dp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="190dp"
            android:layout_marginTop="30dp"
            android:background="@android:color/transparent"
            android:text="@string/Show_Password"
            android:textColor="@android:color/white"
            android:textSize="15dp" />
    </LinearLayout>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@mipmap/lock"
        android:inputType="textWebPassword"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="300dp"
        android:layout_marginTop="10dp"
        android:background="@android:color/transparent"
        android:text="@string/Forward"
        android:textColor="@android:color/white"
        android:textSize="25dp" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"></LinearLayout>
</LinearLayout>
