<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main4"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.microsoftsurface.jalase6.Main4Activity"
    android:background="#616161">

    <TextView
        android:layout_marginTop="140dp"
        android:gravity="center"
        android:textSize="15dp"
        android:textColor="#FFFF"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Turnon"/>

    <TextView
        android:layout_marginLeft="30dp"
        android:layout_marginTop="40dp"
        android:layout_width="300dp"
        android:layout_height="2dp"
        android:background="#CDB79E"/>

    <TextView
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:gravity="center"
        android:textSize="15dp"
        android:textColor="#FFFF"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Text3"/>

    <Button
        android:background="#FF6A6A"
        android:textColor="@android:color/white"
        android:text="@string/Notify"
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="30dp"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        />

    <Button
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="30dp"
        android:background="@drawable/button3"
        android:textColor="@android:color/white"
        android:text="@string/No"/>



</LinearLayout>
