<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context="com.example.microsoftsurface.jalase6.Main2Activity"
    android:weightSum="2"
    android:orientation="vertical">

    <LinearLayout
        android:orientation="vertical"
        android:background="@android:color/white"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="90dp">
            <Button
                android:layout_marginTop="-40dp"
                android:background="@android:color/transparent"
                android:drawableBottom="@mipmap/closeicon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:text="@string/Invite"
                android:gravity="center"
                android:textSize="17dp"
                android:textColor="@android:color/black"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="50dp"
                android:layout_width="wrap_content"
                android:layout_height="match_parent" />
        </LinearLayout>
        <TextView
            android:layout_marginTop="-13dp"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="#BABABA"/>
        <ImageView
            android:clickable="true"
            android:layout_marginTop="5dp"
            android:layout_gravity="center"
            android:src="@mipmap/invitefriend"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:gravity="center"
            android:textColor="#CD3700"
            android:textStyle="bold"
            android:layout_marginTop="8dp"
            android:textSize="18dp"
            android:layout_marginLeft="55dp"
            android:layout_marginRight="55dp"
            android:text="@string/dollar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_marginTop="9dp"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Terms"/>
    </LinearLayout>

    <LinearLayout
        android:background="#E5E5E5"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">
        <Button
            android:drawablePadding="-50dp"
            android:drawableLeft="@mipmap/contact"
            android:textColor="@android:color/white"
            android:text="@string/InviteC"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:background="@drawable/style1them"
            android:layout_width="match_parent"
            android:layout_height="60dp" />

        <LinearLayout
            android:layout_marginTop="15dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_marginTop="10dp"
                android:layout_width="175dp"
                android:layout_height="2dp"
                android:background="#BABABA"/>
            <TextView
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="@string/or"/>
            <TextView
                android:layout_marginTop="10dp"
                android:layout_width="175dp"
                android:layout_height="2dp"
                android:background="#BABABA"/>
        </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Share"
            android:gravity="center"
            android:layout_marginTop="15dp"/>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <Button
            android:layout_marginTop="0dp"
            android:background="@drawable/button2"
            android:layout_marginLeft="20dp"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:text="@string/Share1"/>
        <Button
            android:drawableTop="@mipmap/upload"
            android:layout_marginLeft="10dp"
            android:background="#FFFF"
            android:layout_marginTop="20dp"
            android:layout_width="60dp"
            android:layout_height="50dp" />
        </LinearLayout>
        <TextView
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="#BABABA"/>
        <TextView
            android:textSize="18dp"
            android:textColor="#CD2626"
            android:layout_marginTop="18dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/View"/>

    </LinearLayout>

</LinearLayout>
