<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:background="@mipmap/back"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.microsoftsurface.jalase6.MainActivity">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Wish"
        android:textColor="#FFFF"
        android:textSize="40dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="30dp"/>

    <RelativeLayout
        android:background="@drawable/relativetheme"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="240dp"
        android:layout_width="300dp"
        android:layout_height="200dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Text1"
                android:textColor="#000000"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="45dp"
                android:textSize="25dp"/>
            <TextView
                android:layout_marginTop="25dp"
                android:gravity="center"
                android:textSize="15dp"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Text"/>
            <Button
                android:layout_marginLeft="30dp"
                android:textColor="@android:color/white"
                android:layout_marginRight="30dp"
                android:background="@drawable/style1them"
                android:layout_marginTop="25dp"
                android:layout_width="match_parent"
                android:text="@string/Start"
                android:drawableLeft="@mipmap/start"
                android:layout_height="wrap_content" />

        </LinearLayout>
    </RelativeLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:background="@drawable/lineartheme"
        android:layout_width="350dp"
        android:layout_height="70dp"
        android:layout_marginTop="460dp">

        <Button
            android:layout_marginBottom="-15dp"
            android:background="#0000"
            android:drawableBottom="@mipmap/adblock"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"/>

        <Button
            android:layout_marginBottom="-15dp"
            android:background="#0000"
            android:drawableBottom="@mipmap/app_accuweather"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <Button
            android:layout_marginBottom="-15dp"
            android:background="#0000"
            android:drawableBottom="@mipmap/app_adobeair"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />



    </LinearLayout>


</RelativeLayout>
